--- a/unplugged/css/main.css
+++ b/unplugged/css/main.css
@@ -116,6 +116,11 @@ textarea {
 
 /* header styles */
 
+ul {
+  padding-inline-start: 0px;
+  list-style: none;
+}
+
 header {
     padding: 0 20px;
 }
@@ -175,7 +180,6 @@ header nav ul {
 .features {
   display: flex;
   justify-content: center;
-  align-items: center;
   flex-flow: row wrap;
 
 }
@@ -208,6 +212,7 @@ header nav ul {
   padding: 0 20px;
 }
 
+
 .reviews h3 {
   display: flex;
   align-items: flex-start;
@@ -232,18 +237,20 @@ header nav ul {
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
+  margin: 50px 0 0 0;
 }
+
 
 /*
 ===========================================
         NEED HELP HERE!!!!!!!!
 ===========================================
 */
-.faq .faq-content h4{
+/*.faq .faq-content h4{
   display: flex;
   justify-content: flex-start;
   align-items: flex-start;
-}
+} */
 
 /*
 ============================================================================
@@ -276,9 +283,7 @@ header nav ul {
 
 /* Footer */
 
-footer {
 
-}
 footer p {
   margin: 0;
 }
@@ -405,16 +410,160 @@ footer .copyright {
    Modify as content requires.
    ========================================================================== */
 
-@media only screen and (min-width: 35em) {
-  /* Style adjustments for viewports that meet the condition */
+              /*Tablet styles here*/
+   @media only screen and (min-width: 768px) {
+
+            /* General styles */
+        .content-wrapper {
+            max-width: 640px;
+            margin: 100px 0;
+        }
+
+        /* Header */
+
+        header {
+
+        }
+
+        header .content-wrapper {
+            width:
+        }
+
+        header nav {
+            width:
+        }
+
+        header nav ul {
+            justify-content: space-between;
+        }
+
+        .header-divider {
+            display: none;
+        }
+
+        /* Hero Area */
+
+        /* Aside */
+        aside .content-wrapper {
+            margin: 50px 0;
+            display: flex;
+            justify-content: space-between;
+            flex-flow: row wrap;
+        }
+
+        aside .content-wrapper .form-description,
+        aside .content-wrapper .form {
+            width: 35%;
+            margin: 0;
+        }
+
+        /* Features */
+
+        .features article {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          flex-flow: row wrap;
+          flex-basis: 30%;
+          padding: 0 60px;
+          margin: 30px 0;
+
+        }
+
+        .features .features-item-description {
+            width: 40%;
+        }
+
+        /* Reviews */
+        .reviews article{
+          display: flex;
+          justify-content: flex-start;
+          flex-flow: row wrap;
+
+        }
+
+        .reviews article div {
+            width: 49%;
+        }
+
+        /* Footer */
+
+
+        footer .content-wrapper {
+            width: 65%;
+            margin: 100px 0;
+        }
+
+        .footer-content {
+          display: flex;
+          justify-content: space-between;
+          align-items: center;
+
+        }
+
+        footer .contact {
+            margin-bottom: 0;
+        }
+
+        footer .copyright {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          width: 100%;
+        }
+
+
+
+
+
+
+/* ==========================================================================
+   About Page
+   ========================================================================== */
+
+   .mission-content {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    .mission-content p {
+        width: 40%;
+    }
+
+    .contact-section .content-wrapper h2 {
+        width: 80%;
+    }
+
+    .contact-content {
+        display: flex;
+        justify-content: space-between;
+        align-items: flex-start;
 }
 
-@media print,
-  (-webkit-min-device-pixel-ratio: 1.25),
-  (min-resolution: 1.25dppx),
-  (min-resolution: 120dpi) {
-  /* Style adjustments for high resolution devices */
-}
+/* ==========================================================================
+   FAQ Page
+   ========================================================================== */
+    .faq .content-wrapper {
+      justify-content: space-between;
+    }
+
+    .faq-content {
+        flex-basis: 40%;
+    }
+
+    .faq h2 {
+        width: 100%;
+    }
+
+
+   }
+
+
+            /*Desktop styles here*/
+   @media only screen and (min-width: 1200px) {
+     flex-basis
+   }
 
 /* ==========================================================================
    Print styles.
