--- a/unplugged/css/main.css
+++ b/unplugged/css/main.css
@@ -107,11 +107,14 @@ textarea {
    body {
           font-family: 'Open Sans', sans-serif;
           font-size: 1em;
+          color: #e2e3ed;
+          text-decoration: none;
+
    }
 
    ul,
    ol {
-
+      text-transform: uppercase;
    }
 
    a {
@@ -385,6 +388,31 @@ footer .content-wrapper {
 
 footer .copyright {
   margin: 20px 0;
+}
+
+aside .form {
+  margin-top: 30px;
+}
+
+input[type=text] {
+  box-sizing: border-box;
+  width: 100%;
+  color: #2a423a;
+  font-style: italic;
+}
+
+input[type=button] {
+  width: 100%;
+  padding: 20px 0;
+  margin-top: 20px;
+  background-color: #2a423a;
+  font-family: 'Poppins', Helvetica, Arial, sans-serif;
+  font-weight: 500;
+  font-size: 1.125em;
+  color: #e2e3ed;
+  border: none;
+  text-align: center;
+  text-transform: uppercase;
 }
 
 /* ==========================================================================
