--- a/unplugged/css/main.css
+++ b/unplugged/css/main.css
@@ -197,6 +197,11 @@ header .content-wrapper {
 }
 
 header figure {
+   width: 60%;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   flex-flow: row wrap;
 
 }
 
@@ -222,6 +227,11 @@ header nav ul {
  /* ----------------- Mobile Styles - Homepage ------------ */
 
  .hero-area {
+   background: url('../img/hero-image.jpg');
+   background-size: cover;
+   background-position: center;
+   background-color: #333;
+   min-height: 500px;
    display: flex;
    justify-content: center;
    flex-flow: row wrap;
@@ -240,6 +250,10 @@ header nav ul {
 /* Features */
 
 .features {
+  background: url('../img/splash.jpg');
+  background-size: cover;
+  background-position: center;
+  background-color: #333;
   display: flex;
   justify-content: center;
   flex-flow: row wrap;
