--- a/unplugged/css/main.css
+++ b/unplugged/css/main.css
@@ -124,15 +124,18 @@ textarea {
    }
 
    h2 {
-      font-family: 'Poppins', sans-serif;
-      font-size: 1.875em;
+     font-family: 'Poppins', sans-serif;
+     font-weight: 500;
+     font-size: 1.875em;
+     margin: 0;
    }
 
    h3,
    h4 {
-      font-family: 'Poppins', sans-serif;
-      margin: 20px 0;
-      font-size: 1.125em;
+     font-family: 'Poppins', sans-serif;
+     font-weight: 500;
+     font-size: 1.125em;
+     margin: 20px 0;
    }
 
    p {
@@ -161,15 +164,11 @@ textarea {
 
    }
 
-   .content-wrapper {
-     width: 90%;
-     margin: 50px 0;
-   }
-
    /* ----------------- Base Header - Footer Styles ------------ */
 
    header,
    footer {
+     background-color: #202322;
      display: flex;
      justify-content: center;
      align-items: center;
@@ -179,21 +178,21 @@ textarea {
 /* header styles */
 
 ul {
-  padding-inline-start: 0px;
-  list-style: none;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
 }
 
 header {
-    padding: 0 20px;
+    padding: 15px 0;
 }
 
 header .content-wrapper {
+  margin: 0;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
-  width: 60%;
-  margin-left: 0;
 }
 
 header figure {
@@ -206,23 +205,28 @@ header figure {
 }
 
 .header-divider {
-  width: 100%
+  background: #3a3a3a;
+  height: 1px;
+  width: 100%;
+  margin: 10px 0 20px 0;
 }
 
 header nav {
+  width: 60%;
+  font-size: 1.125em;
+  font-weight: 700;
+  text-transform: uppercase;
   display: flex;
   justify-content: space-around;
   align-items: center;
   flex-flow: row wrap;
-  width: 60%;
-
 }
 
 header nav ul {
+  width: 100%;
   display: flex;
   justify-content: space-around;
-  width: 100%;
-}
+  }
 
  /* ----------------- Mobile Styles - Homepage ------------ */
 
@@ -239,6 +243,7 @@ header nav ul {
 
 /* Aside */
  aside{
+   background-color: #527158;
    display: flex;
    justify-content: center;
    align-items: center;
@@ -259,21 +264,21 @@ header nav ul {
   flex-flow: row wrap;
 
 }
+.features h2{
+  margin-bottom: 60px;
+}
 
 .features article {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 45%;
-  padding: 35px 100px;
+  width: 55%;
+  margin: 30px 0;
 }
 
 .features .features-items {
   display: flex;
   justify-content: center;
+  align-items: center;
   flex-flow: row wrap;
-  padding: 0 20px;
-}
+  }
 
 .features i {
 	font-size: 3.75em;
@@ -281,11 +286,13 @@ header nav ul {
 }
 
 .features p {
+  text-align: center;
   margin: 0;
 }
 /* Reviews */
 
 .reviews {
+  background-color: #2a423a;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -300,6 +307,22 @@ header nav ul {
   width: 50%;
 
 }
+
+footer .social-icons p {
+  background-color: #527158;
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+footer .social-icons p i {
+  font-size: 1.3125em;
+}
+
+
 /*
 ===================================================================
                         FAQ page
@@ -307,6 +330,7 @@ header nav ul {
 */
 
 .faq {
+  background-color: #527158;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -355,6 +379,7 @@ header nav ul {
 }
 
 .mission {
+  background-color: #527158;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -362,6 +387,7 @@ header nav ul {
 }
 
 .contact-section {
+  background-color: #2a423a;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -553,15 +579,21 @@ input[type=button] {
         /* Header */
 
         header {
+          justify-content: space-around;
 
         }
 
         header .content-wrapper {
-            width:
+            width: 100%;
+            justify-content: space-between;
+        }
+
+        header figure {
+          width: 30%;
         }
 
         header nav {
-            width:
+            width: 20%;
         }
 
         header nav ul {
@@ -590,11 +622,15 @@ input[type=button] {
 
         /* Features */
 
+        .features h2 {
+          margin: 0 20px 20px 0;
+        }
+
         .features article {
           display: flex;
           justify-content: center;
           align-items: center;
-          flex-flow: row wrap;
+          flex-flow: column wrap;
           flex-basis: 30%;
           padding: 0 60px;
           margin: 30px 0;
@@ -602,19 +638,34 @@ input[type=button] {
         }
 
         .features .features-item-description {
-            width: 40%;
+            width: 50%;
         }
 
+        .features i {
+          margin-bottom: 30px;
+        }
         /* Reviews */
         .reviews article{
           display: flex;
-          justify-content: flex-start;
-          flex-flow: row wrap;
+          justify-content: space-between;
 
         }
 
+        .reviews h2 {
+          width: 90%;
+        }
         .reviews article div {
             width: 49%;
+        }
+
+        .reviews article figure,
+        .reviews article div {
+          width: 49%;
+        }
+
+        .reviews h3 {
+          width: 75%;
+          margin: 0;
         }
 
         /* Footer */
@@ -625,15 +676,28 @@ input[type=button] {
             margin: 100px 0;
         }
 
-        .footer-content {
+        footer .footer-content {
           display: flex;
           justify-content: space-between;
           align-items: center;
-
+          flex-direction: row;
         }
 
         footer .contact {
             margin-bottom: 0;
+        }
+
+        footer h4 {
+          font-size: 1.5em;
+          margin-bottom: 40px;
+        }
+        footer p {
+            line-height: 1.285;
+        }
+
+        footer .social-icons {
+          width: 12.5em;
+          justify-content: space-between;
         }
 
         footer .copyright {
@@ -697,9 +761,22 @@ input[type=button] {
      .content-wrapper {
               max-width: 960px;
          }
+         h2 {
+           font-size: 2.25em;
+         }
 
+         h3,
+         h4 {
+             font-size: 1.875em;
+         }
+
+         p {
+             font-size: 1.125em;
+             line-height: 1.333;
+         }
           /* Hero */
          .hero-area h1 {
+           font-size: 3.75em;
              width: 60%;
          }
 
@@ -712,7 +789,9 @@ input[type=button] {
          aside .content-wrapper .form {
              width:30%;
          }
-
+         .form-description p {
+           font-size: 1.125em;
+         }
          /* Features */
          .features h2 {
              width: 70%;
